# housing-scraping-public

./: .gitignore  README.md  main.py  pyproject.toml
config/: params_template.json  sites_template.json
src/: email_utils.py  other_utils.py  settings.py  site_utils.py
